fixed overflow for mobile version

--- a/queries.css
+++ b/queries.css
@@ -105,6 +105,13 @@
 }
 
 @media (max-width: 34rem) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .main {
+    margin: 0 2.3rem;
+  }
   .grid {
     row-gap: 4.8rem;
   }
