--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
   flex-direction: column;
   align-items: center; */
   margin: 2.3rem 12.6rem;
-  padding: 0 15px;
+  /* padding: 0 15px; */
 }
 
 .header {
@@ -214,11 +214,11 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
-.hero-img {
+/* .hero-img {
   width: 100%;
   border-radius: 14px;
   max-width: 400px;
-}
+} */
 
 .margin-right-sm {
   margin-right: 1.6rem !important;
